enter, back ,shift R, shift L FIX

--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,7 @@ text-align: center;
   text-align: center;
   padding: 16px 0 0;
 }
-.header-gap > div {
-  display: inline-block;
-  margin: 0 90px;
-}
+
 .keyboard-bg-fade {
   background-color: #000;
   height: 85%;
@@ -130,12 +127,12 @@ keyboard-header {
 }
 .key.backSpace > p {
   margin: 10px;
-  transform: translateY(-26px);
+  transform: translateY(-35px);
   text-align: center;
-  margin-left: 60px;
+  margin-left: 25px;
 }
 .key.backSpace {
-  font-size: 35px;
+  font-size: 20px;
   width: 177px;
 }
 .key.tab {
@@ -170,16 +167,21 @@ keyboard-header {
 }
 .key.enter > p {
   text-align: left;
-  margin-left: 112px;
-  font-size: 44px;
-  transform: translateY(-70px);
+  margin-left: 80px;
+  font-size: 35px;
+  transform: translateY(-65px);
 }
 .key.shiftLeft {
   width: 132px;
 }
-.key.shiftLeft > p,
+.key.shiftLeft > p {
+  font-size: 20px;
+  margin-top: 18px;
+  text-align: left;
+  margin-left: 7px;
+}
 .key.shiftRight > p {
-  font-size: 16px;
+  font-size: 20px;
   margin-top: 18px;
   text-align: left;
   margin-left: 7px;
@@ -192,7 +194,7 @@ keyboard-header {
   height: 116px;
 }
 .key.enterRight > p {
-  font-size: 16px;
+  font-size: 20px;
   margin-top: 48px;
 }
 .key.ctrl1,
